Changed to contact

--- a/_posts/2014-09-22-services-2.markdown
+++ b/_posts/2014-09-22-services-2.markdown
@@ -5,4 +5,4 @@ category: Services
 title: Garden Cleanup
 description: |
 ---
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+One-off or occasional general garden cleanups. Please get in touch for a quote.
