--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -5,6 +5,12 @@ category: Services
 title: Garden Maintenance
 description: |
 ---
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-  Rob is writing a new paragraph here.
+Lawn maintenance including mowing, scarifying, feeding and edging.
+Weeding
+Leaf collecting
+Watering
+General plant care and maintenance
+Recommendation of plants for appropriate areas of the garden
+Supply and planting of plants
+Pruning and training of small trees and shrubs
+Hedge and bush trimming
